--- a/index.html
+++ b/index.html
@@ -9,54 +9,53 @@
         <link rel="stylesheet" href="css/style.css">
 
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8 /">
+        <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     </head>
 
     <body>
       <div class="wrapper">
-        <header><i class="bx bx-left-arrow-alt"></i>Whether App</header>
+        <header><i class='bx bx-left-arrow-alt'></i>Weather App</header>
         <section class="input-part">
-          <p class="info-txt">Please enter a valid city name</p>
-          <input type="text" class="text" placeholder="Enter city name" spellcheck="false" required>
-          <div class="separator"></div>
-          <button>Get Device Location</button>
+          <p class="info-txt"></p>
+          <div class="content">
+            <input type="text" spellcheck="false" placeholder="Enter city name" required>
+            <div class="separator"></div>
+            <button>Get Device Location</button>
+          </div>
         </section>
         <section class="weather-part">
-          <!-- <img src="icons/Weather Icons/cloud.svg" alt="Wheather icon"> -->
+          <img src="" alt="Weather Icon">
           <div class="temp">
-            <span class="numb">13</span>
-            <span class="deg">°</span>С
+            <span class="numb">_</span>
+            <span class="deg">°</span>C
           </div>
-          <div class="weather">Broken Clouds</div>
+          <div class="weather">_ _</div>
           <div class="location">
-            <i class="bx bx-map"></i>
-            <span>Kathmandu, Nepal</span>
+            <i class='bx bx-map'></i>
+            <span>_, _</span>
           </div>
           <div class="bottom-details">
             <div class="column feels">
-              <i class="bx bxs-thermometer"></i>
+              <i class='bx bxs-thermometer'></i>
               <div class="details">
                 <div class="temp">
-                  <span class="numb">17</span>
-                  <span class="deg">°</span>С
+                  <span class="numb-2">_</span>
+                  <span class="deg">°</span>C
                 </div>
                 <p>Feels like</p>
               </div>
             </div>
             <div class="column humidity">
-              <i class="bx bxs-droplet-half"></i>
+              <i class='bx bxs-droplet-half'></i>
               <div class="details">
-                <div class="temp">
-                  <span class="numb">84%</span>
-                  <span class="deg">°</span>С
-                </div>
+                <span>_</span>
                 <p>Humidity</p>
               </div>
             </div>
           </div>
         </section>
-
       </div>
-
+      
       <script src="js/script.js"></script>
     </body>
 
