--- a/index.html
+++ b/index.html
@@ -1,62 +1,69 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 
-  <html lang="ru">
+<html lang="ru">
 
-    <head>
+<head>
 
-        <title>Wheather App</title>
+  <title>Wheather App</title>
 
-        <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
-        <meta http-equiv="Content-type" content="text/html;charset=UTF-8 /">
-        <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-    </head>
+  <meta http-equiv="Content-type" content="text/html;charset=UTF-8 /">
+  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+</head>
 
-    <body>
-      <div class="wrapper">
-        <header><i class='bx bx-left-arrow-alt'></i>Weather App</header>
-        <section class="input-part">
-          <p class="info-txt"></p>
-          <div class="content">
-            <input type="text" spellcheck="false" placeholder="Enter city name" required>
-            <div class="separator"></div>
-            <button>Get Device Location</button>
-          </div>
-        </section>
-        <section class="weather-part">
-          <img src="" alt="Weather Icon">
-          <div class="temp">
-            <span class="numb">_</span>
-            <span class="deg">°</span>C
-          </div>
-          <div class="weather">_ _</div>
-          <div class="location">
-            <i class='bx bx-map'></i>
-            <span>_, _</span>
-          </div>
-          <div class="bottom-details">
-            <div class="column feels">
-              <i class='bx bxs-thermometer'></i>
-              <div class="details">
-                <div class="temp">
-                  <span class="numb-2">_</span>
-                  <span class="deg">°</span>C
-                </div>
-                <p>Feels like</p>
-              </div>
-            </div>
-            <div class="column humidity">
-              <i class='bx bxs-droplet-half'></i>
-              <div class="details">
-                <span>_</span>
-                <p>Humidity</p>
-              </div>
-            </div>
-          </div>
-        </section>
+<body>
+  <div class="wrapper">
+    <header><i class='bx bx-left-arrow-alt'></i>Weather App</header>
+    <section class="input-part">
+      <p class="info-txt"></p>
+      <div class="content">
+        <input type="text" spellcheck="false" placeholder="Enter city name" required>
+        <div class="separator"></div>
+        <button>Get Device Location</button>
       </div>
-      
-      <script src="js/script.js"></script>
-    </body>
+    </section>
+    <section class="weather-part">
+      <img src="" alt="Weather Icon">
+      <div class="temp">
+        <span class="numb">_</span>
+        <span class="deg">°</span>C
+      </div>
+      <div class="weather">_ _</div>
+      <div class="location">
+        <i class='bx bx-map'></i>
+        <span>_, _</span>
+      </div>
+      <div class="bottom-details">
+        <div class="column feels">
+          <i class='bx bxs-thermometer'></i>
+          <div class="details">
+            <div class="temp">
+              <span class="numb-2">_</span>
+              <span class="deg">°</span>C
+            </div>
+            <p>Feels like</p>
+          </div>
+        </div>
+        <div class="column humidity">
+          <i class='bx bxs-droplet-half'></i>
+          <div class="details">
+            <span>_</span>
+            <p>Humidity</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <div class="weekWeather">
+    <div class="weekWeather__title">5 days weather</div>
+    <div class="weekWeather__days">
 
-  </html>
+    </div>
+
+  </div>
+
+  <script src="js/script.js"></script>
+</body>
+
+</html>
