--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Wheather App</title>
 
   <link rel="stylesheet" href="css/style.css">
-
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8 /">
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 </head>
